learned function vars and parameters

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
       <h1>Charlie Website</h1>
     </div>
     <button onclick="addDiv()">add +</button>
-    <button onclick="logc()">log charlie</button>
+    <button onclick="logc('hi', 'charlie')">log charlie</button>
     <div id="test-element"></div>
   </body>
 </html>
